--- a/micro.qsf
+++ b/micro.qsf
@@ -45,7 +45,6 @@ set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP1"
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 240
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 8
 set_global_assignment -name VERILOG_FILE pc.v
-set_global_assignment -name VERILOG_FILE reg_file.v
 set_global_assignment -name VERILOG_FILE alu.v
 set_global_assignment -name VERILOG_FILE micro.v
 set_global_assignment -name VERILOG_FILE memory.v
@@ -53,7 +52,6 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VERILOG_FILE register_file.v
-set_global_assignment -name VERILOG_FILE ir.v
+set_global_assignment -name VERILOG_FILE phase_gen.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VERILOG_FILE sr.v
-set_global_assignment -name VERILOG_FILE tr.v
+set_global_assignment -name VERILOG_FILE embedded_ram.v
